Material preview icons don't refresh #74983

Closed
opened 2020-03-20 20:21:08 +01:00 by Vyacheslav Kobozev · 16 comments

System Information
Operating system: Windows-7-6.1.7601-SP1 64 Bits
Graphics card: GeForce GTX 660 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 442.59

Blender Version
Broken: version: 2.83 (sub 10), branch: master, commit date: 2020-03-19 13:43, hash: 42012493a8
Worked: 2.82a release

Short description of error
The material preview icons no longer automatically refresh when you make changes to material properties.

2020-03-20_22-16-41.mp4

**System Information** Operating system: Windows-7-6.1.7601-SP1 64 Bits Graphics card: GeForce GTX 660 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 442.59 **Blender Version** Broken: version: 2.83 (sub 10), branch: master, commit date: 2020-03-19 13:43, hash: `42012493a8` Worked: 2.82a release **Short description of error** The material preview icons no longer automatically refresh when you make changes to material properties. [2020-03-20_22-16-41.mp4](https://archive.blender.org/developer/F8418445/2020-03-20_22-16-41.mp4)

Added subscriber: @Vyach

Added subscriber: @Vyach
William Reynish changed title from Material icon do not refreshes. Regression bug. to Material preview icons don't refresh 2020-03-20 20:45:11 +01:00

Added subscriber: @WilliamReynish

Added subscriber: @WilliamReynish

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

I can confirm this - it appears to be a bug.

I can confirm this - it appears to be a bug.

Added subscriber: @Basselmks

Added subscriber: @Basselmks

I want to start in fixing this bug but I don't know where to start looking in the source code.

I want to start in fixing this bug but I don't know where to start looking in the source code.

Added subscriber: @brecht

Added subscriber: @brecht

@Basselmks, since it worked previously, the solution here would be to use git bisect to find the commit that caused the problem. That should reveal which part of the code the problem is in.

@Basselmks, since it worked previously, the solution here would be to use [git bisect ](https://git-scm.com/docs/git-bisect) to find the commit that caused the problem. That should reveal which part of the code the problem is in.
Member

Added subscribers: @dr.sybren, @lichtwerk

Added subscribers: @dr.sybren, @lichtwerk
Member

Caused by ff60dd8b18

CC @dr.sybren

Caused by ff60dd8b18 CC @dr.sybren
Member

Added subscriber: @Tempo

Added subscriber: @Tempo
Alexia self-assigned this 2020-03-28 04:44:47 +01:00
Member

I made a simple patch for this issue, how can I get reviewed ?

I made a simple patch for this issue, how can I get reviewed ?
Member

Added subscriber: @ankitm

Added subscriber: @ankitm
Member
https://developer.blender.org/differential/diff/create/
Alexia was unassigned by Sybren A. Stüvel 2020-04-02 14:16:28 +02:00
Sybren A. Stüvel self-assigned this 2020-04-02 14:16:28 +02:00

This issue was referenced by e276558a50

This issue was referenced by e276558a50f06c6ec5d6b36b138ad5777dd05c0a

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
9 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#74983
No description provided.